# typhoon-deep-research

backend/: README.md  __init__.py  main.py  requirements.txt
backend/agent/: __init__.py  prompt_template.md
backend/models/: __init__.py  biomass_model.py  gee_client.py
backend/utils/: __init__.py  carbon.py  geo.py  reporting.py
backend/utils/examples/: __init__.py  carbon_calculation_example.py
docs/: system-diagram.md
frontend/: README.md  package.json  tsconfig.json
frontend/src/app/: page.tsx
frontend/src/components/: CarbonMap.tsx
frontend/src/lib/: api.ts
python_app/: README.md  pyproject.toml
python_app/app/: main.py
