[project]
name = "typhoon-deep-research-python"
version = "0.1.0"
description = "Python rewrite of Typhoon Deep Research using FastAPI"
requires-python = ">=3.10"

[project.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
requests = "^2.31.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
